package com.example.myapplication.MainClasses;

public interface GUIListener {
    public void setHealthBar(int health);
    public void keyCollect();
    public void resetGUI();

    public void shoot();
}
